--- a/_includes/docs_nav.html
+++ b/_includes/docs_nav.html
@@ -3,17 +3,17 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse-{{forloop.index}}" aria-expanded="false" aria-controls="collapse-{{forloop.index}}">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse-{{forloop.index}}" aria-expanded="true" aria-controls="collapse-{{forloop.index}}">
           {{ section.title }}
         </a>
       </h4>
     </div>
-    <div id="collapse-{{forloop.index}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+    <div id="collapse-{{forloop.index}}" class="panel-collapse collapse in" role="tabpanel" aria-expanded="true"  aria-labelledby="headingOne">
       <ul class="list-group">
         {% for item in section.docs %}
-          {% assign item_url = item | prepend:"/docs/" | append:"/" %}
+          {% assign item_url = item.url | prepend:"/docs/" | append:"/" %}
           {% assign p = site.docs | where:"url", item_url | first %}
-          <a class="list-group-item {% if item_url == page.url %}active{% endif %}" href="{{ p.url  | prepend: site.baseurl }}">{{ p.title }}</a>
+          <a class="list-group-item {% if item_url == page.url %}active{% endif %}" href="{{ p.url  | prepend: site.baseurl }}">{{ item.text }}</a>
         {% endfor %}
       </ul>
     </div>
