--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
     <div class="container">
 
         <p class="text-center">
-            {{ site.title }} {{ site.time | date: '%Y' }} |
-            Powered by <a href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme</a>
+            TsaiYee <i class="fa fa-copyright" aria-hidden="true"></i> 2015 - {{ site.time | date: '%Y' }}|
+             蔡一 <i class="fa fa-copyright" aria-hidden="true"></i> 2015 - {{ site.time | date: '%Y' }} 
         </p>
         <!-- <p class="text-muted">Place sticky footer content here.</p> -->
     </div>
