--- a/_includes/js_files.html
+++ b/_includes/js_files.html
@@ -6,3 +6,4 @@
 <script src="{{ "/js/typeahead.bundle.min.js" | prepend: site.baseurl }} "></script>
 
 <script src="{{ "/js/main.js" | prepend: site.baseurl }} "></script>
+<script src="{{ "/js/toc.js" | prepend: site.baseurl }} "></script>
