--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -13,7 +13,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/home/" | prepend: site.baseurl }}">Wiki | 知识</a></li>
+                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/home/" | prepend: site.baseurl }}">Favorite | 收藏</a></li>
                 <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">Blog | 记录</a></li>
                 <li {% if page.sectionid=='about' %} class="active" {% endif %}><a href="{{ "/about" | prepend: site.baseurl }}">About | 关于</a></li>
             </ul>
