--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,7 @@ html {
   min-height: 100%;
 }
 body {
+  font-family: 'PingFang SC', 'Microsoft Yahei', Helvetica, Arial, sans-serif;
   padding-top: $navbar-height + $navbar-margin-bottom;
   margin-bottom: 46px;
 }
@@ -57,6 +58,11 @@ body {
 }
 .page-content {
   padding-bottom: 20px;
+  font-size: 110%;
+}
+
+blockquote {
+  font-size: 90%;
 }
 .footer {
   position: absolute;
