--- a/css/main.scss
+++ b/css/main.scss
@@ -30,6 +30,7 @@ body {
   font-family: 'PingFang SC', 'Microsoft Yahei', Helvetica, Arial, sans-serif;
   padding-top: $navbar-height + $navbar-margin-bottom;
   margin-bottom: 46px;
+  line-height: 1.8;
 }
 
 .navbar-brand{
