--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -3,18 +3,16 @@ layout: default
 ---
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-4">
-          {% include docs_nav.html %}
-        </div>
-
-        <div class="col-md-8">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
             <h1>{{ page.title }}</h1>
             <div id="toc"></div>
             <div id="markdown-content-container">{{ content }}</div>
             <hr>
             {% include section_nav.html %}
         </div>
+      </div>
+    </div>
 
     </div>
 </div>
