--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -4,9 +4,11 @@ layout: default
 
 <div class="container">
   <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-4">
+          <div id="toc"></div>
+  </div>
+    <div class="col-md-8">
             <h1>{{ page.title }}</h1>
-            <div id="toc"></div>
             <div id="markdown-content-container">{{ content }}</div>
             <hr>
             {% include section_nav.html %}
