--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/font-awesome.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/pygments.css" | prepend: site.baseurl }}">
 
     <link rel="shortcut icon" href="{{ "/favicon.png?1" | prepend: site.baseurl }}">
     {% seo %}
