--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -26,6 +26,7 @@
                 </form>
                 <ul class="nav navbar-nav">
                     <li><a href="{{ site.git_address }}"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li> <a href="https://gitter.im/tsaiyee/tsaiyee.com?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge"><img src="https://badges.gitter.im/tsaiyee/tsaiyee.com.svg" alt="Gitter"></a></li>
                 </ul>
             </div>
         </div>
