--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -1,20 +1,21 @@
 ---
 layout: default
+comments: true
 ---
 
 <div class="container">
   <div class="row">
     <div class="col-md-4">
           <div id="toc"></div>
-  </div>
+    </div>
     <div class="col-md-8">
             <h1>{{ page.title }}</h1>
             <div id="markdown-content-container">{{ content }}</div>
             <hr>
             {% include section_nav.html %}
-        </div>
-      </div>
     </div>
-
+    <div class="col-md-12">
+    {% include comments.html %}
     </div>
+  </div>
 </div>
