--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,10 @@
 ---
 layout: default
+comments: true
 ---
 
 <div class="container">
     <div class="row">
-
         <div class="col-md-10 col-md-offset-1">
             <h1>{{ page.title }}</h1>
             <p>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
@@ -26,6 +26,8 @@ layout: default
                 {% endif %}
             </ul>
         </div>
-
+    </div>
+    <div class="col-md-10 col-md-offset-1">
+    {% include comments.html %}
     </div>
 </div>
