--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -9,7 +9,10 @@ comments: true
           <div id="toc"></div>
     </div>
     <div class="col-md-8">
-            <h1>{{ page.title }}</h1>
+      <p>
+            <h1 class="text-center">{{ page.title }}</h1>
+            <h4 class="text-center">{{page.author}}, {{page.date | date: "%Y-%m-%d" }}</h4>
+      </p>
             <div id="markdown-content-container">{{ content }}</div>
             <hr>
             {% include section_nav.html %}
