--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@ comments: true
 <div class="container">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
-            <h1>{{ page.title }}</h1>
-            <p>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+            <h1 class="text-center">{{ page.title }}</h1>
+            <p class="text-center">{{ page.date | date: "%Y-%m-%d" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
             <div  id="markdown-content-container">{{ content }}</div>
             <hr>
             <ul class="pager">
