--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
 
         <p class="text-center">
-            TsaiYee <i class="fa fa-copyright" aria-hidden="true"></i> 2015 - {{ site.time | date: '%Y' }} |
+            Yee Tsai<i class="fa fa-copyright" aria-hidden="true"></i> 2015 - {{ site.time | date: '%Y' }} |
              蔡一 <i class="fa fa-copyright" aria-hidden="true"></i> 2015 - {{ site.time | date: '%Y' }}
         </p>
         <!-- <p class="text-muted">Place sticky footer content here.</p> -->
